Add email notification when log is created, updated or deleted

--- a/frontend/src/locale/en.json
+++ b/frontend/src/locale/en.json
@@ -11,6 +11,8 @@
     "global_admin": "Admin",
     "global_members": "Access Member",
     "global_members_hint": "If access member is not empty, other users cannot access this logbook.",
+    "global_observers": "Observers",
+    "global_observers_hint": "Observers will be notified by email when there is a log update in the logbook",
     "global_home_page": "Home",
     "global_login_page": "Login",
     "global_register_page": "Register",
@@ -20,12 +22,12 @@
     "global_confirm_password": "Confirm Password",
     "global_success": "Success",
     "global_fail": "Fail",
-    "global_current_password_cannot_empty": "Current password cannot be empty！",
-    "global_password_cannot_empty": "Password cannot be empty！",
-    "global_confirm_password_cannot_empty": "Confirm password cannot be empty！",
-    "global_two_passwords_different": "Two passwords are different！",
-    "global_email_cannot_empty": "Email cannot be empty！",
-    "global_name_cannot_empty": "Name cannot be empty！",
+    "global_current_password_cannot_empty": "Current password cannot be empty!",
+    "global_password_cannot_empty": "Password cannot be empty!",
+    "global_confirm_password_cannot_empty": "Confirm password cannot be empty!",
+    "global_two_passwords_different": "Two passwords are different!",
+    "global_email_cannot_empty": "Email cannot be empty!",
+    "global_name_cannot_empty": "Name cannot be empty!",
     "global_create": "Create",
     "global_modify": "Modify",
     "global_add": "Add",
@@ -58,7 +60,7 @@
 
 
     "app_login": "Login",
-    "app_logout_confirm_message": "Are you sure you want to log out？",
+    "app_logout_confirm_message": "Are you sure you want to log out?",
     "app_account_information": "Account Info",
     "app_logout": "Logout",
     "app_browser_languages": "Browser Languages",
@@ -184,8 +186,8 @@
     "login_forget_password": "Forget Password",
     "login_change_password": "Change Password",
     "login_fail": "Login Failed",
-    "login_username_cannot_empty": "Username cannot be empty！",
-    "login_password_cannot_empty": "Password cannot be empty！",
+    "login_username_cannot_empty": "Username cannot be empty!",
+    "login_password_cannot_empty": "Password cannot be empty!",
 
 
     "oauth_login_fail": "Login Failed",
