--- a/frontend/src/locale/zh.json
+++ b/frontend/src/locale/zh.json
@@ -11,6 +11,8 @@
     "global_admin": "管理员",
     "global_members": "访问成员",
     "global_members_hint": "如果访问成员为非空，其他人员将无法访问这个记录本",
+    "global_observers": "观察者",
+    "global_observers_hint": "当记录本中有日志更新时，观察者将会收到邮件通知",
     "global_home_page": "首页",
     "global_login_page": "登录页",
     "global_register_page": "注册页",
