--- a/frontend/src/locale/zh.json
+++ b/frontend/src/locale/zh.json
@@ -28,6 +28,7 @@
     "global_two_passwords_different": "两次输入的密码不一致！",
     "global_email_cannot_empty": "邮箱不能为空！",
     "global_name_cannot_empty": "姓名不能为空！",
+    "global_detail": "详情",
     "global_create": "创建",
     "global_modify": "修改",
     "global_add": "添加",
@@ -152,6 +153,21 @@
     "tagmanagement_tag_delete_success": "标签删除成功",
 
 
+    "templatemanagement_title": "模板信息",
+    "templatemanagement_create_template": "新建模板",
+    "templatemanagement_edit_template": "编辑模板",
+    "templatemanagement_import_template": "模板导入",
+    "templatemanagement_template_selection": "模板选择",
+    "templatemanagement_content": "内容",
+    "templatemanagement_select": "选择",
+    "templatemanagement_delete_template_prompt": "确定要删除如下模板吗?",
+    "templatemanagement_discard_template_prompt": "确定要放弃编辑当前模板吗?",
+    "templatemanagement_template_load_error": "模板信息加载失败",
+    "templatemanagement_template_create_success": "模板创建成功",
+    "templatemanagement_template_modify_success": "模板修改成功",
+    "templatemanagement_template_delete_success": "模板删除成功",
+
+
     "usermanagement_title": "用户权限",
     "usermanagement_search": "姓名、邮箱",
     "usermanagement_create_user": "新建用户",
@@ -202,6 +218,7 @@
     "menu_logbook_grouping": "记录本分组",
     "menu_logbook": "记录本",
     "menu_tag": "标签",
+    "menu_template": "模板",
     "menu_user_management": "用户权限",
     "menu_account_management": "账号管理",
     "menu_browser_languages": "浏览器语言",
