Add advanced search for log time searching

--- a/frontend/src/locale/en.json
+++ b/frontend/src/locale/en.json
@@ -18,6 +18,9 @@
     "global_register_page": "Register",
     "global_retrieve_password": "Retrieve Password",
     "global_reset": "Reset",
+    "global_advanced": "Advanced",
+    "global_start_date": "Start date",
+    "global_end_date": "End date",
     "global_password": "Password",
     "global_confirm_password": "Confirm Password",
     "global_success": "Success",
