--- a/frontend/src/locale/zh.json
+++ b/frontend/src/locale/zh.json
@@ -18,6 +18,9 @@
     "global_register_page": "注册页",
     "global_retrieve_password": "找回密码",
     "global_reset": "重置",
+    "global_advanced": "高级",
+    "global_start_date": "开始时间",
+    "global_end_date": "结束时间",
     "global_password": "密码",
     "global_confirm_password": "密码确认",
     "global_success": "操作完成",
