Add first, last, previous and next buttons on log detail page

--- a/frontend/src/locale/en.json
+++ b/frontend/src/locale/en.json
@@ -191,6 +191,12 @@
     "logdetail_title": "Log Detail",
     "logdetail_delete_log_prompt": "Are you sure you want to delete the current log?",
     "logdetail_log_load_error": "Fail to load the current log",
+    "logdetail_first": "First",
+    "logdetail_previous": "Previous",
+    "logdetail_next": "Next",
+    "logdetail_last": "Last",
+    "logdetail_already_first": "This is the first entry",
+    "logdetail_already_last": "This is the last entry",
 
 
     "logedit_title": "Edit Log",
